# uncle-pascal

./: .gitignore  Cargo.toml  Consts.pas  Enumeration.pas  FunctionPointer.pas  HelloWorld.c  HelloWorld.pas  README.md  System.pas  Vector.pas  calculator.txt  case.c  ir.txt  rustfmt.toml  sdl2.txt  todo.md
backend_c/: Cargo.toml
common/: Cargo.toml
demos/: AmbigMethod.pas  AnyRef.pas  Bytes.pas  Calculator.pas  Calculator.test.json  Classes.pas  Cond.pas  CondBinding.pas  Constructor.pas  Consts.pas  DupDecl.pas  Empty.pas  Empty.test.json  Enumeration.pas  ForLoop.pas  ForLoopBreak.pas  FunctionArgModifiers.pas  FunctionPointer.pas  Functions.pas  Generics.pas  HelloWorld.pas  HelloWorld.test.json  IFace.pas  Interfaces.pas  IsCond.pas  IsCondVariant.pas  Makefile  Operators.pas  Preprocessor.pas  Raise.pas  Rc.pas  RcRecord.pas  RcReturn.pas  RcVariant.pas  ReadFile.pas  RefParams.pas  SDL2Demo.pas  Strings.pas  Uses.pas  Variant.pas  (+3 more)
doc/: Interfaces.md  NoArgsCalls.md  TypeDecl.md  comparison.md  functions.md  index.md  memory.md  objects.md  units.md
frontend/: Cargo.toml
interpreter/: Cargo.toml
interpreter/src/: builtin.rs  dyn_value.rs  func.rs  heap.rs  lib.rs  marshal.rs  memcell.rs  ptr.rs  result.rs  stack.rs  value_cell.rs
interpreter/src/diag/: mod.rs
interpreter/src/func/: ffi.rs
interpreter/src/heap/: native_heap.rs  value_heap.rs
interpreter/src/marshal/: test.rs
interpreter/src/stack/: trace.rs
ir_lang/: Cargo.toml
ir_lang/src/: formatter.rs  function.rs  instruction.rs  lib.rs  library.rs  metadata.rs  module.rs  rtti.rs  ty.rs  ty_decl.rs  val.rs
ir_lang/src/dep_sort/: mod.rs
ir_lang/src/ty_decl/: interface.rs  struct.rs  variant.rs
pas_ast/: Cargo.toml
pas_backend_c/: Cargo.toml
pas_common/: Cargo.toml
pas_interpreter/: Cargo.toml
pas_ir/: Cargo.toml
pas_pp/: Cargo.toml
pas_syn/: Cargo.toml
pas_typecheck/: Cargo.toml
pas_typecheck/src/: annotation.rs  ast.rs  context.rs  lib.rs  result.rs  test.rs  ty.rs
pas_typecheck/src/annotation/: symbol.rs
pas_typecheck/src/ast/: bin_op.rs  block.rs  call.rs  case.rs  cast.rs  cond.rs  const_eval.rs  ctor.rs  expr.rs  expression.rs  function.rs  iter.rs  match_block.rs  op.rs  raise.rs  size_of.rs  statement.rs  stmt.rs  typedecl.rs  unit.rs
pas_typecheck/src/ast/call/: args.rs  overload.rs  test.rs
pas_typecheck/src/ast/expr/: init.rs  literal.rs
pas_typecheck/src/ast/expression/: generic.rs
pas_typecheck/src/ast/statement/: assign.rs  generic.rs
pas_typecheck/src/ast/stmt/: assign.rs
pas_typecheck/src/context/: builtin.rs  decl.rs  def.rs  ns.rs  result.rs  scope.rs  ufcs.rs  value_kind.rs
pas_typecheck/src/context/scope/: path_ref.rs  scope_stack.rs  test.rs
pas_typecheck/src/ty/: closure.rs  layout.rs  pattern.rs  primitive.rs  sig.rs  test.rs  ty_param.rs
(+667 files in other folders)
