[package]
name = "pascal2"
version = "0.1.0"
authors = ["spriest487 <spriest487@googlemail.com>"]
edition = "2021"

[dependencies]
pas_common = { path = "common" }
compiler = { path = "frontend" }
pas_ir = { path = "intermediate" }
pas_interpreter = { path = "interpreter" }
pas_backend_c = { path = "backend_c" }

structopt = "0.3.25"
codespan = "0.11.1"
codespan-reporting = "0.11.1"
topological-sort = "0.2.2"

[workspace]
members = [
    "common",
    "frontend",
    "intermediate", 
    "test_runner",
]
