[package]
name = "pascal2"
version = "0.1.0"
authors = ["spriest487 <spriest487@googlemail.com>"]
edition = "2021"

[dependencies]
common = { path = "common" }
frontend = { path = "frontend" }
intermediate = { path = "intermediate" }
interpreter = { path = "interpreter" }
backend_c = { path = "backend_c" }

structopt = "0.3.25"
codespan = "0.11.1"
codespan-reporting = "0.11.1"
topological-sort = "0.2.2"

[workspace]
members = [
    "common",
    "frontend",
    "intermediate", "ir_lang", 
    "test_runner",
]
