[package]
name = "interpreter"
version = "0.1.0"
authors = ["spriest487 <spriest487@googlemail.com>"]
edition = "2021"

[dependencies]
ir-lang = { path = "../ir_lang" }
common = { path = "../common" }
libffi = "3.2.0"
dlopen = "0.1.8"
cast = "0.3.0"
smallvec = "1.8.0"
rouille = "3.6.2"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
rand = "0.8.5"
